# gradle-cpp-plugin

./: .systemTests.gradle.kate-swp  .travis.yml  .travis.yml.orig  README.md  build.gradle  developersDoc.md  fr.echoes.gradle.plugins.cpp.CppExecTaskSpec.html  fr.echoes.gradle.plugins.cpp.DistZipTaskSpec.html  fr.echoes.gradle.plugins.cpp.DownloadLibTasksSpec.html  fr.echoes.gradle.plugins.cpp.InitOutputDirsTasks.html  fr.echoes.gradle.plugins.cpp.InvalidCmakeProject.html  fr.echoes.gradle.plugins.cpp.ProjectTasksTest.html  fr.echoes.gradle.plugins.cpp.UploadArchivesTask.html  fr.echoes.gradle.plugins.cpp.UtilsSpec.html  gradle.properties  index.html  params.json  release-process.md  settings.gradle  systemTests.gradle  update-gh-pages.sh
cpp-project-plugin/: .classpath  .project  build.gradle
cpp-task-plugin/: .classpath  .project  build.gradle
docs/modules/: cmake-modules.md
exemples/: version.gradle
exemples/hello-world/: CMakeLists.txt  build.gradle  gradle.properties
exemples/hello-world-multi-modules/: build.gradle  gradle.properties  settings.gradle
exemples/hello-world-multi-modules/hello-library/: CMakeLists.txt  build.gradle
exemples/hello-world-multi-modules/hello-library/gradle/wrapper/: gradle-wrapper.properties
exemples/hello-world-multi-modules/hello-library/src/main/cpp/: Speaker.cpp
exemples/hello-world-multi-modules/hello-library/src/main/headers/: Speaker.hpp
exemples/hello-world-multi-modules/hello-library/src/test/cpp/hello/: SpeakerTest.cpp
exemples/hello-world-multi-modules/hello-main/: CMakeLists.txt  build.gradle
exemples/hello-world-multi-modules/hello-main/src/main/cpp/main/: HelloWorld.cpp
exemples/hello-world-with-libraries/: .CMakeLists.txt.kate-swp
exemples/hello-world-with-libraries/hello-library/: .gradle.properties.kate-swp  CMakeLists.txt  build.gradle  gradle.properties
exemples/hello-world-with-libraries/hello-library/cmake_modules/: gradle-cpp-cppUnitTest.cmake  gradle-cpp.cmake
exemples/hello-world-with-libraries/hello-library/gradle/wrapper/: gradle-wrapper.properties
exemples/hello-world-with-libraries/hello-library/src/main/cpp/hello/: Speaker.cpp
exemples/hello-world-with-libraries/hello-library/src/test/cpp/: SpeakerTest.cpp  run_tests.cpp
exemples/hello-world-with-libraries/hello-library/src/test/headers/: SpeakerTest.hpp
exemples/hello-world-with-libraries/hello-library/src/test/headers/hello/: SpeakerTest.hpp
exemples/hello-world-with-libraries/hello-main/: CMakeLists.txt  build.gradle  gradle.properties
exemples/hello-world-with-libraries/hello-main/cmake_modules/: gradle-cpp-cppUnitTest.cmake
exemples/hello-world-with-libraries/hello-main/gradle/wrapper/: gradle-wrapper.properties
exemples/hello-world-with-libraries/hello-main/src/main/cpp/: HelloWorld.cpp
exemples/hello-world/cmake-modules/: gradle-cpp.cmake
exemples/hello-world/cmake_modules/: gradle-cpp.cmake
exemples/hello-world/gradle/wrapper/: gradle-wrapper.properties
exemples/hello-world/src/main/cpp/hello/: Speaker.cpp
exemples/hello-world/src/main/cpp/main/: HelloWorld.cpp
gradle/: publish.gradle
gradle/wrapper/: gradle-wrapper.properties
groovydoc/1.2.5/: deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html
groovydoc/1.2.5-SNAPSHOT/: deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html
groovydoc/1.2.7/: deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html
groovydoc/1.2.8/: deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html
groovydoc/1.2.8-SNAPSHOT/: deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html
groovydoc/1.2.9/: deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html
groovydoc/1.2.9-SNAPSHOT/: deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  package-list
groovydoc/1.3.0-SNAPSHOT/: deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html
modules/: cmake-modules.md
modules/cmake_modules/: gradle-cpp-cppUnitTest.cmake  gradle-cpp.cmake
spock-reports/: fr.echoes.gradle.plugins.cpp.CppExecTaskSpec.html  fr.echoes.gradle.plugins.cpp.DistZipTaskSpec.html  fr.echoes.gradle.plugins.cpp.DownloadLibTasksSpec.html  fr.echoes.gradle.plugins.cpp.InitOutputDirsTasks.html  fr.echoes.gradle.plugins.cpp.InvalidCmakeProject.html  fr.echoes.gradle.plugins.cpp.ProjectTasksTest.html  fr.echoes.gradle.plugins.cpp.UploadArchivesTask.html  fr.echoes.gradle.plugins.cpp.UtilsSpec.html  index.html
spock-reports/1.2.5/: fr.echoes.gradle.plugins.cpp.CppExecTaskSpec.html  fr.echoes.gradle.plugins.cpp.DistZipTaskSpec.html  fr.echoes.gradle.plugins.cpp.DownloadLibTaskSpec.html  fr.echoes.gradle.plugins.cpp.InitOutputDirsTaskSpec.html  fr.echoes.gradle.plugins.cpp.ProjectTaskSpec.html  fr.echoes.gradle.plugins.cpp.UploadArchivesTask.html  fr.echoes.gradle.plugins.cpp.UtilsSpec.html  index.html
spock-reports/1.2.5-SNAPSHOT/: allclasses-frame.html  fr.echoes.gradle.plugins.cpp.CppExecTaskSpec.html  fr.echoes.gradle.plugins.cpp.DistZipTaskSpec.html  fr.echoes.gradle.plugins.cpp.DownloadLibTaskSpec.html  fr.echoes.gradle.plugins.cpp.DownloadLibTasksSpec.html  fr.echoes.gradle.plugins.cpp.InitOutputDirsTaskSpec.html  fr.echoes.gradle.plugins.cpp.InitOutputDirsTasks.html  fr.echoes.gradle.plugins.cpp.InvalidCmakeProject.html  fr.echoes.gradle.plugins.cpp.ProjectTaskSpec.html  fr.echoes.gradle.plugins.cpp.ProjectTasksTest.html  fr.echoes.gradle.plugins.cpp.UploadArchivesTask.html  fr.echoes.gradle.plugins.cpp.UtilsSpec.html  index.html
spock-reports/1.2.7/: fr.echoes.gradle.plugins.cpp.CppExecTaskSpec.html  fr.echoes.gradle.plugins.cpp.DistZipTaskSpec.html  fr.echoes.gradle.plugins.cpp.DownloadLibTaskSpec.html  fr.echoes.gradle.plugins.cpp.InitOutputDirsTaskSpec.html  index.html  (+3 more)
(+257 files in other folders)
